Refactor `BaristaTests` file in exercise 2.